# react-native-navigation

./: .detoxrc.js  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .grenrc.js  .npmignore  .npmrc  .prettierrc  .snyk  .travis.yml  .yarnrc.yml  404.html  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Jenkinsfile  LICENSE  Package.swift  README.md  RNNExternalViewCreator.h  ReactNativeNavigation.podspec  Utils.js  babel.config.js  cmd-to-remove-wix-tags.txt  index.e2e.js  index.html  jest-setup.js  jest.config.js  metro.config.js  motitest.yml  motitest2.yml  package-lock.json  package.json  react-native-navigation-fork-1.1.88.tgz  react-native-navigation.podspec  react-native.config.js  resolver.js  sitemap.xml  (+6 more)
lib/android/app/: CMakeLists.txt  build.gradle  jsi_jni_adapter.cpp
lib/android/app/src/androidTest/: AndroidManifest.xml
lib/android/app/src/androidTest/java/com/reactnativenavigation/: BaseAndroidTest.kt  NavigationInstrumentationTest.kt  TestActivity.kt  TestApplication.kt  TestUtils.java
lib/android/app/src/androidTest/java/com/reactnativenavigation/mocks/: SimpleViewController.java  TitleBarButtonCreatorMock.java  TitleBarReactViewCreatorMock.java  TopBarBackgroundViewCreatorMock.java
lib/android/app/src/androidTest/java/com/reactnativenavigation/utils/: ButtonPresenterTest.kt
lib/android/app/src/androidTest/java/com/reactnativenavigation/views/: TitleSubTitleLayoutTest.kt
lib/android/app/src/main/: AndroidManifest.xml
lib/android/app/src/main/java/com/reactnativenavigation/: FeatureToggles.kt  NavigationActivity.java  NavigationApplication.java  NavigationApplication.kt  NavigationPackage.java  PIPAcitivity.kt
lib/android/app/src/main/java/com/reactnativenavigation/anim/: AnimationPresenter.java  (+12 more)
lib/android/app/src/main/res/drawable/: fullscreen_icon.xml  fullscreen_svg.xml  ic_menu_overflow_black_24dp.xml  pip_button_background.xml  pip_layout_bg.xml
lib/android/app/src/main/res/layout/: activity_pip.xml  pip_buttons_layout.xml  pip_dismiss_view.xml
lib/android/app/src/main/res/values/: dimen.xml  ids.xml  strings.xml  styles.xml
lib/android/app/src/test/java/com/reactnativenavigation/: BaseTest.java  BaseTest.kt  EnvironmentTest.java  TestActivity.java  TestApplication.java  TestUtils.java
(+27003 files in other folders)
